# docs/swagger.yaml
@@ -130,6 +130,26 @@ definitions:
         description: 总条数
         type: integer
     type: object
+  model.ListResponse-model_User:
+    properties:
+      errCode:
+        description: 错误码
+        type: string
+      errMessage:
+        description: 错误信息
+        type: string
+      list:
+        description: 列表
+        items:
+          $ref: '#/definitions/model.User'
+        type: array
+      success:
+        description: 请求是否成功
+        type: boolean
+      total:
+        description: 总条数
+        type: integer
+    type: object
   model.Response-model_Facility:
     properties:
       data:
@@ -145,6 +165,129 @@ definitions:
       success:
         description: 请求是否成功
         type: boolean
+    type: object
+  model.Response-model_User:
+    properties:
+      data:
+        allOf:
+        - $ref: '#/definitions/model.User'
+        description: 数据
+      errCode:
+        description: 错误码
+        type: string
+      errMessage:
+        description: 错误信息
+        type: string
+      success:
+        description: 请求是否成功
+        type: boolean
+    type: object
+  model.User:
+    properties:
+      address:
+        type: string
+      apple_id:
+        type: string
+      birth:
+        type: string
+      created_at:
+        type: string
+      email:
+        type: string
+      gender:
+        type: string
+      google_id:
+        type: string
+      name:
+        type: string
+      name_kana:
+        type: string
+      password:
+        type: string
+      phone_number:
+        type: string
+      provider:
+        type: string
+      status:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  model.UserReqCreate:
+    properties:
+      address:
+        type: string
+      apple_id:
+        type: string
+      birth:
+        type: string
+      email:
+        type: string
+      gender:
+        type: string
+      google_id:
+        type: string
+      name:
+        type: string
+      name_kana:
+        type: string
+      password:
+        type: string
+      phone_number:
+        type: string
+      provider:
+        type: string
+      status:
+        type: string
+    required:
+    - email
+    - provider
+    - status
+    type: object
+  model.UserReqEdit:
+    properties:
+      address:
+        type: string
+      apple_id:
+        type: string
+      birth:
+        type: string
+      email:
+        type: string
+      gender:
+        type: string
+      google_id:
+        type: string
+      name:
+        type: string
+      name_kana:
+        type: string
+      password:
+        type: string
+      phone_number:
+        type: string
+      provider:
+        type: string
+      status:
+        type: string
+      user_id:
+        type: integer
+    required:
+    - user_id
+    type: object
+  model.UserReqList:
+    properties:
+      keyword:
+        type: string
+      page:
+        type: integer
+      page_size:
+        type: integer
+    required:
+    - page
+    - page_size
     type: object
 info:
   contact: {}
@@ -288,4 +431,146 @@ paths:
       summary: 获取设施列表
       tags:
       - Facilities
+  /api/users:
+    post:
+      consumes:
+      - application/json
+      description: 新建一个用户
+      parameters:
+      - description: 用户信息
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.UserReqCreate'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response-model_User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+      summary: 新建用户
+      tags:
+      - Users
+    put:
+      consumes:
+      - application/json
+      description: 更新一个用户信息
+      parameters:
+      - description: 用户信息
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.UserReqEdit'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+      summary: 更新用户
+      tags:
+      - Users
+  /api/users/{user_id}:
+    delete:
+      consumes:
+      - application/json
+      description: 删除一个用户
+      parameters:
+      - description: 用户ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+      summary: 删除用户
+      tags:
+      - Users
+    get:
+      consumes:
+      - application/json
+      description: 获取单个用户信息
+      parameters:
+      - description: 用户ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response-model_User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+      summary: 获取用户信息
+      tags:
+      - Users
+  /api/users/list:
+    post:
+      consumes:
+      - application/json
+      description: 获取用户分页列表
+      parameters:
+      - description: 分页与搜索
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/model.UserReqList'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.ListResponse-model_User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+      summary: 获取用户列表
+      tags:
+      - Users
 swagger: "2.0"
